# Voxel-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build.bat  main.cpp
.github/workflows/: build.yml
shaders/: frag.spv  shader.frag  shader.vert  sky.frag  sky.vert  vert.spv
src/: Time.cpp  Time.hpp  main.cpp
src/core/: Constants.hpp  Debug.cpp  Debug.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  InputHandler.cpp  InputHandler.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp
src/renderer/: Vertex.cpp  Vertex.hpp
src/scene/: Camera.hpp  Sky.cpp  Sky.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp
